# ellesse

./: README.md  main.go
cpp/: CMakeLists.txt  Makefile  ellesse  main.cpp
cpp/cli/: CMakeLists.txt  main.cpp
cpp/lib/: CMakeLists.txt
cpp/lib/include/: ellesse.hpp  file.hpp
cpp/lib/src/: ellesse.cpp  file.cpp
cpp/qt/: CMakeLists.txt  main.cpp  main.qml
cpp/qt/include/: ellesse_viewer.hpp
cpp/qt/src/: ellesse_viewer.cpp
cpp/src/: ellesse.cpp  ellesse.hpp  file.hpp
